--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1807,107 +1807,107 @@ stories:
   domain: http://www.wctrib.com/
   link: https://www.wctrib.com/news/accidents/4833850-Minnesota-man-dies-after-fall-through-skylight
 images:
-- name: crypto-machine-bletchley-crypto-machine-bletchley-post-modern.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-post-modern.png
-- name: ellis-island-ellis-island-room-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-smooth-ride.jpg
+- name: downtheline-downtheline-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-dark-soul.jpg
+- name: stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
+- name: server-cloud-server-racks-clouds-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-creativity.jpg
+- name: containership-containership-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-rain.jpg
+- name: mediterranean-mediterranean-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-nazi-poster.jpg
+- name: nyc-flag-nycflag-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-constitution.jpg
+- name: nazi-invasion-old-ship-waterfront-harbor.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-ship-waterfront-harbor.jpg
+- name: copper-circuit-gears-pipes-plumbing.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-gears-pipes-plumbing.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-graham-sutherland.jpg
+- name: nazi-invasion-nyc-coming-in-on-train.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-nyc-coming-in-on-train.jpg
+- name: old-door-lock-old-door-lock-2-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-electricity.jpg
+- name: oldtrain-oldtrain-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-pablo-blue.jpg
+- name: bf-skinner-train-in-station-two-coming.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-in-station-two-coming.jpg
+- name: aws-s3-stories-adam-smith-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-adam-smith-blue-circuit-5.jpg
+- name: ellis-island-ellis-island-room-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-post-modern.jpg
+- name: containership-containership-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-granite.jpg
+- name: window-window-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-crafty-painting.jpg
+- name: castle-wall-DSC-0067-sunday.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-sunday.JPG
+- name: mediterranean-mediterranean-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-yellow-collage.jpg
+- name: containership-containership-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-crabapple.jpg
+- name: copper-circuit-gypsy-house-with-pen.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-gypsy-house-with-pen.jpg
+- name: border-fence-border-fence-on-hill-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-emily-carr.jpg
+- name: yuma-bank-yuma-bak-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-atari-asteroids.jpg
+- name: nazi-invasion-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-container-several-colors-grey.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-constitution.jpg
+- name: statue-of-liberty-front-view-statueofliberty-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-post-modern.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-5.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-5.png
+- name: sand-hand-sand-hand-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-hot-spicy.jpg
+- name: oldhousecars-house-old-cars-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-feed-people.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-deep-connections.jpg
+- name: ellis-island-ellis-island-room-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-yellow-collage.jpg
+- name: adam-smith-adam-smith-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-dresden.jpg
+- name: aws-s3-desertrun-desertrun-still-2560.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-desertrun-desertrun-still-2560.jpg
+- name: bluelake-gred-mash-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gred-mash-file-00-00-00-00.jpg
+- name: machine-road-machine-road-copper-circuit-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-copper-circuit-2.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-marcel-duchamp.jpg
+- name: old-house-oldhouse-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-cinnamon-rolls.jpg
+- name: blossombar-colorful-dream-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-24-99.jpg
+- name: birdhouse-birdhouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-green-zuma.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-creativity.jpg
 - name: pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-post-modern.jpg
-- name: copper-circuit-border-fence-down-the-line-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-border-fence-down-the-line-2.jpg
-- name: curtain-curtain-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-clean-view.jpg
-- name: nazi-invasion-christ-cross-chalice.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-christ-cross-chalice.jpg
-- name: braceros-domingo-ulloa-white-house-west-wing-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-white-house-west-wing-view.jpg
-- name: white-house-lawn-white-house-lawn-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-gan-vogh.jpg
-- name: capital-battle-capitolbattle-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-nazi-poster.jpg
-- name: blossombar-far-away-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-far-away-file-00-00-50-62.jpg
-- name: old-school-house-old-schoolhouse-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dark-rain.jpg
-- name: san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-crabapple.jpg
-- name: fence-fence-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-gred-mash.jpg
-- name: window-window-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-plentiful.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-gan-vogh.jpg
-- name: power-lines-power-lines-empty-space-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-bright-sand.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-atari-asteroids.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-atari-asteroids.JPG
-- name: adam-smith-adam-smith-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-color.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-plentiful.jpg
-- name: copper-circuit-dragon-turning-head.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dragon-turning-head.jpg
-- name: razorcliff-razorcliff-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-three.jpg
-- name: amusement-park-amusement-park-2-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-light-dali.jpg
-- name: store-on-corner-store-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-kandinsky-bv.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-granite.jpg
-- name: birdhouse-birdhouse-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-creativity.jpg
-- name: amusement-park-amusement-park-2-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-green-zuma.jpg
-- name: rain-princess-border-watching-cars.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-watching-cars.jpg
-- name: curtain-curtain-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-far-away.jpg
-- name: server-cloud-server-racks-clouds-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-horiz-circuit.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-blue-electricity.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-blue-electricity.JPG
-- name: oldbarn-oldbarn-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-space-pizza.jpg
-- name: beach-rocks-beach-rocks-currents-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-purple-pond.jpg
-- name: bf-skinner-underground-subway_35929749683_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-underground-subway_35929749683_o.jpg
-- name: yuma-bank-yuma-bak-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colorful-dream.jpg
-- name: stories-downtheline-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtheline-dali-three.jpg
-- name: stalin-time-face-eyes-shut-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-face-eyes-shut-statue.jpg
-- name: ellis-island-ellisisland-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-smoking-cigarette.jpg
-- name: bf-skinner-train-subway-125th-down-the-line.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-subway-125th-down-the-line.jpg
-- name: yosemite-yosemite-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-gred-mash.jpg
-- name: school-clouds-church-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds.jpg
-- name: white-house-whitehouse-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-yellow-collage.jpg
-- name: school-clouds-church-clouds-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-china-prop.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-plentiful.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-yellow-paper.jpg
-- name: blossombar-post-modern-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-post-modern-file-00-00-50-62.jpg
-- name: old-house-oldhouse-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-umberto-bocc.jpg
-- name: san-francisco-street-view-san-francisco-street-view-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-internet-numbers.jpg
-- name: border-fence-border-fence-on-hill-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-rainbow-festival.jpg
-- name: nazi-invasion-capital-records-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-capital-records-building.jpg
-- name: razorwire-DSC-0080-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-plentiful.jpg
-- name: subway-subway-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-marcel-duchamp.jpg
+- name: server-cloud-server-racks-door-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-mucha-mult.jpg
+- name: supreme-court-supremecourt-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-gred-mash.jpg
+- name: rain-princess-IMG_4300.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_4300.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-monet-one.jpg
+- name: birdhouse-birdhouse-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-constitution.jpg
+- name: castle-wall-DSC-0067-dali-two.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dali-two.JPG
+- name: la-muse-docs-cranes-waterfront.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-docs-cranes-waterfront.jpg
+- name: la-muse-cargo-ship_36587814601_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-cargo-ship_36587814601_o.jpg
+- name: gypsymosaic-gypsy-eyes-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-atari-missle.jpg
+- name: server-cloud-server-racks-clouds-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smooth-ride.jpg
 ---
 Hall Of Fame Baseball.&nbsp;Amid Citizenship Law Outcry, Indian Authorities Ban Protests.&nbsp;Natural Health Care With The Best Teas.&nbsp;Titans Will Have Derrick Henry, Not Jackson Against Saints.&nbsp;Judges Sue Kansas Lawmakers Hoping To Boost Courts' Funding.&nbsp;Georgia Restores Thousands Of Purged Voters.&nbsp;Luper Joins Missouri As Offensive Assistant.&nbsp;Elf On The White House Shelf.&nbsp;
